[package]
name = "mqtt_topic_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
left-right = "0.11.5"
rand = { version = "0.9.1", features = ["std_rng"] }
tokio = { version = "1.45.0", features = ["full"] }
parking_lot = { version = "0.12.3" }
futures = "0.3.31"

[profile.release]
debug = true