[package]
name = "mqtt_topic_tree"
version = "0.1.2"
edition = "2024"
description = "A blazingly fast topic tree for mqtt routing."
license = "MIT"
repository = "https://github.com/NelisVolschenk/mqtt_topic_tree"
readme = "README.md"

[dependencies]
left-right = "0.11.5"
rand = { version = "0.9.1", features = ["std_rng"] }
parking_lot = { version = "0.12.3" }

[profile.release]
debug = true

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }